Add supervising activities section.

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -53,7 +53,7 @@ permalink: /
 						
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Main skills :</h3></div>
+					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-check-square-o" aria-hidden="true"></i> Main skills :</h3></div>
 					<ul>
 						<li><b>Scientific writing</b></li>
 						<li><b>Software engineering</b></li>
@@ -62,5 +62,21 @@ permalink: /
 					</ul>
 				</div>
 			</div>
-
+			<h2 style="margin-top: auto; border-bottom: 1px solid;">Supervising activities</h2>
+			<div class=articles>
+				{% include supervise_en.html 
+					student='<a href="https://www.linkedin.com/in/lucas-maisonnave-ba8b041a2/">Lucas Maisonnave</a>'
+					degree='PhD student'
+					subject=''
+					date='April 2023 - October 2025'
+					supervisors='<a href="https://www.linkedin.com/in/olivierbichler/">Olivier Bichler</a>, <a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://team.inria.fr/corse/team-members/fabrice-rastello/">Fabrice Rastello</a>'
+				%}
+				{% include supervise_en.html 
+					student='<a href="https://www.linkedin.com/in/jose-melo-costa/">José Lucas De Melo Costa</a>'
+					degree='Master student'
+					subject='Study of the embarkability of transformers'
+					date='April 2023 - October 2023'
+					supervisors='<a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://www.linkedin.com/in/inna-kucher-phd-14528169/">Inna Kucher</a>'
+				%}
+			</div>
 	</div><!-- /.blurb -->
