--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -69,5 +69,22 @@ permalink: /fr
 				</ul>
 			</div>
 		</div>
+		<h2 style="margin-top: auto; border-bottom: 1px solid;">Activité d'encadrement</h2>
+			<div class=articles>
+				{% include supervise_fr.html 
+					student='<a href="https://www.linkedin.com/in/lucas-maisonnave-ba8b041a2/">Lucas Maisonnave</a>'
+					degree='Doctorant'
+					subject=''
+					date='April 2023 - October 2025'
+					supervisors='<a href="https://www.linkedin.com/in/olivierbichler/">Olivier Bichler</a>, <a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://team.inria.fr/corse/team-members/fabrice-rastello/">Fabrice Rastello</a>'
+				%}
+				{% include supervise_fr.html 
+					student='<a href="https://www.linkedin.com/in/jose-melo-costa/">José Lucas De Melo Costa</a>'
+					degree='Étudiant en Master'
+					subject='Étude de l\'embarquabilité des transformers'
+					date='Avril 2023 - Octobre 2023'
+					supervisors='<a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://www.linkedin.com/in/inna-kucher-phd-14528169/">Inna Kucher</a>'
+				%}
+			</div>
 	</div><!-- /.blurb -->
 
