Work Experience -> Experiences

--- a/pages/fr/experience.html
+++ b/pages/fr/experience.html
@@ -1,9 +1,9 @@
 ---
 layout: fr
-title: Work Experiences
+title: Experiences
 lang: fr
 ref: work
-permalink: /work_experiences/fr
+permalink: /experiences/fr
 ---
 	<div class="blurb">
 		<h1>Mon expérience professionnelle</h1>
