--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -22,7 +22,7 @@ permalink: /fr
 		</div>
 
 
-		<h2 style="margin-top: auto; border-bottom: 1px solid;">Compétences</h2>
+		<h2 style="margin-top: auto; border-bottom: 1px solid;">Compétences & Expertises</h2>
 		<div class="flex-container"  style="flex-wrap: wrap;">
 			<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 				<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i> Langages de programmation</h3></div>
