--- a/pages/en/experience.html
+++ b/pages/en/experience.html
@@ -1,9 +1,9 @@
 ---
 layout: en
-title: Work Experiences
+title: Experiences
 lang: en
 ref: work
-permalink: /work_experiences
+permalink: /experiences
 ---
 	<div class="blurb">
 		<h1>My work experiences</h1>
