--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -20,7 +20,7 @@ permalink: /
 			</div>
 		</div>
 
-			<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills</h2>
+			<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills & Expertises</h2>
 			<div class="flex-container" style="flex-wrap: wrap;">
 				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i> Programming languages :</h3></div>
