Update about me section.

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -15,6 +15,7 @@ permalink: /
 				<div class="bulb"><h2>About me</h2></div>
 					<p>
 						I am a French research engineer in computer science working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development.
+						I have an <a href="education.html#enssat-section">engineering diploma</a> in computer science (AI) at ENSSAT Lannion (2017-2020), and a <a href="education.html#msif-section">master degree</a> in research in computer science at Rennes 1 (2019-2020).
 						I am currently working on <a href="https://github.com/CEA-LIST/N2D2">N2D2</a> a framework to train neural network and export them on various devices.
 					</p>
 			</div>
