--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -15,7 +15,7 @@ permalink: /fr
 				<div class="bulb"><h2>Qui suis-je ?</h2></div>
 					<p>
 					Ingénieur chercheur français au <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du développement.
-					Je travaille sur des thématiques de réseaux de neuronnes.
+					J'ai suivi une <a href="education.html#enssat-section">formation d'ingénieur</a> en informatique spécialisé en IA à l'ENSSAT Lannion (2017-2020). J'ai aussi un diplôme de <a href="education.html#msif-section">Master Recherche</a> en informatique à Rennes 1 (2019-2020).
 					Actuellement, je fais partie des développeurs principaux du framework <a href="https://github.com/CEA-LIST/N2D2">N2D2</a> qui a pour objectif de permettre d'embarquer des réseaux des neuronnes vers diverses cibles matérielle.
 					</p>
 			</div>
