--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -60,15 +60,32 @@ permalink: /fr
 					
 				</ul>
 			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
+				<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Librairies & Frameworks</h3></div>
+				<ul style="list-style-type: none; margin-left: -1em;">
+					<li><img src="/_static/pytorch-logo.png" alt="pytorch logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyTorch</b></li>
+					<li><img src="/_static/tensorflow-logo.png"  alt="tensorflow logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorFlow/Keras</b></li>
+					<li><img src="/_static/tensorrt-logo.png"  alt="TensorRT logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorRT</b></li>
+					<li><img src="/_static/cuda-logo.png" alt="CUDA logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>CUDA/CuDNN</b></li>
+					<li><img src="/_static/pybind-logo.png" alt="Pybind logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyBind</b></li>
+					<li><img src="/_static/docker-logo.png" alt="Docker logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Docker</b></li>
+				</ul>
+			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 				<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Compétences principales</h3></div>
 				<ul>
-					<li><b>Rédaction scientifique</b></li>
+					
 					<li><b>Génie logiciel</b></li>
 					<li><b>Apprentissage automatique</b></li>
-					<li><b>Fouille de données</b></li>
+					<ul>
+						<li><b>Convolutionnal Neural Network</b></li>
+						<li><b>Detector</b></li>
+						<li><b>Semantic Segmentation</b></li>
+						<li><b>Transformers</b></li>
+					</ul>
+					<li><b>Rédaction scientifique</b></li>
 				</ul>
 			</div>
-		</div>
+		</div><!--flex-container-->
+
 		<h2 style="margin-top: auto; border-bottom: 1px solid;">Activité d'encadrement</h2>
 			<div class=articles>
 				{% include supervise_fr.html 
