--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -42,7 +42,9 @@ permalink: /
 							<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
 								<img src="/_static/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 					</ul>
-				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
+				</div>
+				<!--
+				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-language" aria-hidden="true"></i> Languages :</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
 						<li style="margin-bottom: 0.5em;">
@@ -53,14 +55,15 @@ permalink: /
 							<img src="/_static/es_flag.png" alt="spanish flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>Spanish (Beginner level)</b></li>
 						
 					</ul>
-				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
+				</div>-->
+				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Libraries & Frameworks</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
 						<li><img src="/_static/pytorch-logo.png" alt="pytorch logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyTorch</b></li>
 						<li><img src="/_static/tensorflow-logo.png"  alt="tensorflow logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorFlow/Keras</b></li>
 						<li><img src="/_static/tensorrt-logo.png"  alt="TensorRT logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorRT</b></li>
 						<li><img src="/_static/cuda-logo.png" alt="CUDA logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>CUDA/CuDNN</b></li>
-						<li><img src="/_static/pybind-logo.png" alt="Pybind logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyBind</b></li>
+						<!--<li><img src="/_static/pybind-logo.png" alt="Pybind logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyBind</b></li>-->
 						<li><img src="/_static/docker-logo.png" alt="Docker logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Docker</b></li>
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
@@ -84,7 +87,7 @@ permalink: /
 				{% include supervise_en.html 
 					student='<a href="https://www.linkedin.com/in/lucas-maisonnave-ba8b041a2/">Lucas Maisonnave</a>'
 					degree='PhD student'
-					subject=''
+					subject='Encoding with maximum entropy in deep neural networks'
 					date='April 2023 - October 2025'
 					supervisors='<a href="https://www.linkedin.com/in/olivierbichler/">Olivier Bichler</a>, <a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://team.inria.fr/corse/team-members/fabrice-rastello/">Fabrice Rastello</a>'
 				%}
