Typo in home.html

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -87,9 +87,9 @@ permalink: /
 				{% include supervise_en.html 
 					student='<a href="https://www.linkedin.com/in/lucas-maisonnave-ba8b041a2/">Lucas Maisonnave</a>'
 					degree='PhD student'
-					subject='Encoding with maximum entropy in deep neural networks'
+					subject='Maximum entropy coding in Deep Neural Networks'
 					date='April 2023 - October 2025'
-					supervisors='<a href="https://www.linkedin.com/in/olivierbichler/">Olivier Bichler</a>, <a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://team.inria.fr/corse/team-members/fabrice-rastello/">Fabrice Rastello</a>'
+					supervisors='<a href="https://www.linkedin.com/in/olivierbichler/">Olivier Bichler</a>, <a href="https://www.linkedin.com/in/cmoineau/">Cyril Moineau</a>, <a href="https://team.inria.fr/corse/team-members/fabrice-rastello/"></a>Fabrice Rastello</a>'
 				%}
 				{% include supervise_en.html 
 					student='<a href="https://www.linkedin.com/in/jose-melo-costa/">José Lucas De Melo Costa</a>'
