Fix english in Florian Robert profile.

--- a/pages/fr/research.html
+++ b/pages/fr/research.html
@@ -40,7 +40,7 @@ permalink: /research/fr
     </div>
     <h3>Étudiant en Master</h3>
     <div class=articles>
-        {% include supervise_en.html
+        {% include supervise_fr.html
         student='<a href="https://www.linkedin.com/in/florian-robert-ia/">Florian Robert</a>'
         degree='Étudiant en Master'
         subject='Déploiement de réseaux de neurones sur processeur Qualcomm Snap Dragon'
