--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -5,45 +5,74 @@ lang: en
 ref: home
 permalink: /
 ---
-	<div class="blurb">    
-		<div id="presentation">
-			<img class="profile_picture" src="/_static/Cyril.jpg" alt="Profil picture">
-			<h1 class="main_title">Cyril MOINEAU</h1>
-		</div>
-		<div class="flex-container">
-			<div class="box" style="margin: 1em;">
-				<div class="bulb"><h2>About me</h2></div>
-					<p>
-						I am a French research engineer in computer science working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development.
-						I have an <a href="education.html#enssat-section">engineering diploma</a> in computer science (AI) at ENSSAT Lannion (2017-2020), and a <a href="education.html#msif-section">master degree</a> in research in computer science at Rennes 1 (2019-2020).
-						I am currently working on <a href="https://github.com/CEA-LIST/N2D2">N2D2</a> a framework to train neural network and export them on various devices.
-					</p>
+<div class="blurb">
+	<section class="hero-container blurb">
+		<div class="hero-content">
+			<div class="hero-text">
+				<h1 class="main_title">Cyril MOINEAU</h1>
+				<div class="hero-intro">
+					<div class="hero-bio-box">
+						<h2>About me</h2>
+						<p>
+							I am a French research engineer in computer science working at the <a
+								href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of
+							technological research
+							and development.
+							I have an <a href="education.html#enssat-section">engineering diploma</a> in computer
+							science (AI) at
+							ENSSAT Lannion (2017-2020), and a <a href="education.html#msif-section">master degree</a> in
+							research in
+							computer science at Rennes 1 (2019-2020).
+							I am currently working on <a href="https://github.com/CEA-LIST/N2D2">N2D2</a> a framework to
+							train
+							neural network and export them on various devices.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="hero-image-wrapper">
+				<img class="profile_picture_new" src="/_static/cyril.jpg" alt="Cyril Moineau giving a presentation.">
 			</div>
 		</div>
+	</section>
 
-			<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills & Expertises</h2>
-			<div class="flex-container" style="flex-wrap: wrap;">
-				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i> Programming languages :</h3></div>
-					<ul style="list-style-type: none; margin-left: -1em;">
-						<li>
-							<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
-							<img src="/_static/python.png" alt="python logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a></li>
-						<li>
-								<a href="https://github.com/cmoineau?tab=repositories&language=cpp" style="margin:1em;">
-									<img src="/_static/cpp.png" alt="cpp logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>C++</b></a></li>
-						<li>
-							<a href="https://github.com/cmoineau?tab=repositories&language=java" style="margin:1em;">
-								<img src="/_static/java.png" alt="java logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Java</b></a></li>
-						<li>
-							<a href="https://github.com/cmoineau?tab=repositories&language=javascript" style="margin:1em;">
-								<img src="/_static/js.png" alt="javascript logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>JavaScript</b></a></li>
-						<li>
-							<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
-								<img src="/_static/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
-					</ul>
-				</div>
-				<!--
+
+	<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills & Expertises</h2>
+	<div class="flex-container" style="flex-wrap: wrap;">
+		<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
+			<div class="bulb">
+				<h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i>
+					Programming languages :</h3>
+			</div>
+			<ul style="list-style-type: none; margin-left: -1em;">
+				<li>
+					<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
+						<img src="/_static/python.png" alt="python logo"
+							style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a>
+				</li>
+				<li>
+					<a href="https://github.com/cmoineau?tab=repositories&language=cpp" style="margin:1em;">
+						<img src="/_static/cpp.png" alt="cpp logo"
+							style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>C++</b></a>
+				</li>
+				<li>
+					<a href="https://github.com/cmoineau?tab=repositories&language=java" style="margin:1em;">
+						<img src="/_static/java.png" alt="java logo"
+							style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Java</b></a>
+				</li>
+				<li>
+					<a href="https://github.com/cmoineau?tab=repositories&language=javascript" style="margin:1em;">
+						<img src="/_static/js.png" alt="javascript logo"
+							style="height: 1em; width: 1em; margin-right: 0.5em;"><b>JavaScript</b></a>
+				</li>
+				<li>
+					<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
+						<img src="/_static/c.png" alt="C logo"
+							style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a>
+				</li>
+			</ul>
+		</div>
+		<!--
 				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-language" aria-hidden="true"></i> Languages :</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
@@ -53,33 +82,45 @@ permalink: /
 							<img src="/_static/en_flag.png" alt="UK flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>English (C1 level)</b></li>
 						<li style="margin-bottom: 0.5em;">
 							<img src="/_static/es_flag.png" alt="spanish flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>Spanish (Beginner level)</b></li>
-						
+
 					</ul>
 				</div>-->
-				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Libraries & Frameworks</h3></div>
-					<ul style="list-style-type: none; margin-left: -1em;">
-						<li><img src="/_static/pytorch-logo.png" alt="pytorch logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyTorch</b></li>
-						<li><img src="/_static/tensorflow-logo.png"  alt="tensorflow logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorFlow/Keras</b></li>
-						<li><img src="/_static/tensorrt-logo.png"  alt="TensorRT logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorRT</b></li>
-						<li><img src="/_static/cuda-logo.png" alt="CUDA logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>CUDA/CuDNN</b></li>
-						<!--<li><img src="/_static/pybind-logo.png" alt="Pybind logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyBind</b></li>-->
-						<li><img src="/_static/docker-logo.png" alt="Docker logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Docker</b></li>
-					</ul>
-				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-check-square-o" aria-hidden="true"></i> Main skills :</h3></div>
-					<ul>
-						<li><b>Software engineering</b></li>
-						<li><b>Machine learning</b></li>
-						<ul>
-							<li><b>Convolutionnal Neural Network</b></li>
-							<li><b>Detector</b></li>
-							<li><b>Semantic Segmentation</b></li>
-							<li><b>Transformers</b></li>
-						</ul>
-						<li><b>Computer vision</b></li>
-						<li><b>Scientific writing</b></li>
-					</ul>
-				</div>
+		<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
+			<div class="bulb">
+				<h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-puzzle-piece"
+						aria-hidden="true"></i> Libraries & Frameworks</h3>
 			</div>
-	</div><!-- /.blurb -->
+			<ul style="list-style-type: none; margin-left: -1em;">
+				<li><img src="/_static/pytorch-logo.png" alt="pytorch logo"
+						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyTorch</b></li>
+				<li><img src="/_static/tensorflow-logo.png" alt="tensorflow logo"
+						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorFlow/Keras</b></li>
+				<li><img src="/_static/tensorrt-logo.png" alt="TensorRT logo"
+						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorRT</b></li>
+				<li><img src="/_static/cuda-logo.png" alt="CUDA logo"
+						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>CUDA/CuDNN</b></li>
+				<!--<li><img src="/_static/pybind-logo.png" alt="Pybind logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyBind</b></li>-->
+				<li><img src="/_static/docker-logo.png" alt="Docker logo"
+						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Docker</b></li>
+			</ul>
+		</div>
+		<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
+			<div class="bulb">
+				<h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-check-square-o"
+						aria-hidden="true"></i> Main skills :</h3>
+			</div>
+			<ul>
+				<li><b>Software engineering</b></li>
+				<li><b>Machine learning</b></li>
+				<ul>
+					<li><b>Convolutionnal Neural Network</b></li>
+					<li><b>Detector</b></li>
+					<li><b>Semantic Segmentation</b></li>
+					<li><b>Transformers</b></li>
+				</ul>
+				<li><b>Computer vision</b></li>
+				<li><b>Scientific writing</b></li>
+			</ul>
+		</div>
+	</div>
+</div><!-- /.blurb -->
