--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -37,90 +37,93 @@ permalink: /
 	</section>
 
 
-	<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills & Expertises</h2>
-	<div class="flex-container" style="flex-wrap: wrap;">
-		<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-			<div class="bulb">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i>
-					Programming languages :</h3>
-			</div>
-			<ul style="list-style-type: none; margin-left: -1em;">
-				<li>
-					<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
-						<img src="/_static/python.png" alt="python logo"
-							style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a>
-				</li>
-				<li>
-					<a href="https://github.com/cmoineau?tab=repositories&language=cpp" style="margin:1em;">
-						<img src="/_static/cpp.png" alt="cpp logo"
-							style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>C++</b></a>
-				</li>
-				<li>
-					<a href="https://github.com/cmoineau?tab=repositories&language=java" style="margin:1em;">
-						<img src="/_static/java.png" alt="java logo"
-							style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Java</b></a>
-				</li>
-				<li>
-					<a href="https://github.com/cmoineau?tab=repositories&language=javascript" style="margin:1em;">
-						<img src="/_static/js.png" alt="javascript logo"
-							style="height: 1em; width: 1em; margin-right: 0.5em;"><b>JavaScript</b></a>
-				</li>
-				<li>
-					<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
-						<img src="/_static/c.png" alt="C logo"
-							style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a>
-				</li>
-			</ul>
-		</div>
-		<!--
-				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-language" aria-hidden="true"></i> Languages :</h3></div>
-					<ul style="list-style-type: none; margin-left: -1em;">
-						<li style="margin-bottom: 0.5em;">
-							<img src="/_static/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
-						<li style="margin-bottom: 0.5em;">
-							<img src="/_static/en_flag.png" alt="UK flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>English (C1 level)</b></li>
-						<li style="margin-bottom: 0.5em;">
-							<img src="/_static/es_flag.png" alt="spanish flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>Spanish (Beginner level)</b></li>
+	<section class="skills-section">
+		<h2 class="section-title">Skills & Expertise</h2>
 
-					</ul>
-				</div>-->
-		<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-			<div class="bulb">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-puzzle-piece"
-						aria-hidden="true"></i> Libraries & Frameworks</h3>
+		<div class="skills-grid">
+			<div class="skill-card">
+				<div class="card-header">
+					<i class="fa fa-code"></i>
+					<h3>Languages</h3>
+				</div>
+				<div class="skill-list">
+					<a href="https://github.com/cmoineau?tab=repositories&language=python" class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+						<span>Python</span>
+					</a>
+					<a href="https://github.com/cmoineau?tab=repositories&language=cpp" class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
+						<span>C++</span>
+					</a>
+					<a href="https://github.com/cmoineau?tab=repositories&language=c" class="skill-item">
+						<img src="/_static/c.png" alt="C language logo" />
+						<span>C</span>
+					</a>
+					<a href="https://github.com/cmoineau?tab=repositories&language=javascript" class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+						<span>JavaScript</span>
+					</a>
+					<a href="https://github.com/cmoineau?tab=repositories&language=java" class="skill-item">
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
+						<span>Java</span>
+					</a>
+				</div>
 			</div>
-			<ul style="list-style-type: none; margin-left: -1em;">
-				<li><img src="/_static/pytorch-logo.png" alt="pytorch logo"
-						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyTorch</b></li>
-				<li><img src="/_static/tensorflow-logo.png" alt="tensorflow logo"
-						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorFlow/Keras</b></li>
-				<li><img src="/_static/tensorrt-logo.png" alt="TensorRT logo"
-						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>TensorRT</b></li>
-				<li><img src="/_static/cuda-logo.png" alt="CUDA logo"
-						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>CUDA/CuDNN</b></li>
-				<!--<li><img src="/_static/pybind-logo.png" alt="Pybind logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>PyBind</b></li>-->
-				<li><img src="/_static/docker-logo.png" alt="Docker logo"
-						style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Docker</b></li>
-			</ul>
-		</div>
-		<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-			<div class="bulb">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-check-square-o"
-						aria-hidden="true"></i> Main skills :</h3>
+
+			<div class="skill-card">
+				<div class="card-header">
+					<i class="fa fa-cubes"></i>
+					<h3>Frameworks</h3>
+				</div>
+				<div class="skill-list">
+					<div class="skill-item">
+						<img src="/_static/cuda-logo.png" alt="CUDA logo" />
+						<span>CUDA/CuDNN</span>
+					</div>
+					<div class="skill-item">
+						<img src="/_static/tensorrt-logo.png" alt="TensorRT logo" />
+						<span>TensorRT</span>
+					</div>
+					<div class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pytorch/pytorch-original.svg" />
+						<span>PyTorch</span>
+					</div>
+					<div class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tensorflow/tensorflow-original.svg" />
+						<span>TensorFlow</span>
+					</div>
+					<div class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" />
+						<span>Docker</span>
+					</div>
+					<div class="skill-item">
+						<img
+							src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/gitlab/gitlab-original.svg" />
+						<span>GitLab CI</span>
+					</div>
+				</div>
 			</div>
-			<ul>
-				<li><b>Software engineering</b></li>
-				<li><b>Machine learning</b></li>
-				<ul>
-					<li><b>Convolutionnal Neural Network</b></li>
-					<li><b>Detector</b></li>
-					<li><b>Semantic Segmentation</b></li>
-					<li><b>Transformers</b></li>
-				</ul>
-				<li><b>Computer vision</b></li>
-				<li><b>Scientific writing</b></li>
-			</ul>
+
+			<div class="skill-card">
+				<div class="card-header">
+					<i class="fa fa-brain"></i>
+					<h3>Expertise</h3>
+				</div>
+				<div class="tags-container">
+					<span class="skill-tag">Software Engineering</span>
+					<span class="skill-tag highlight">Machine Learning</span>
+					<span class="skill-tag sub">CNNs</span>
+					<span class="skill-tag sub">Transformers</span>
+					<span class="skill-tag">Computer Vision</span>
+					<span class="skill-tag">Scientific Writing</span>
+				</div>
+			</div>
 		</div>
-	</div>
+	</section>
 </div><!-- /.blurb -->
